--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,11 +1,39 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title><%= title %></title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-  </head>
-  <body>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
-  </body>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Mybook</title>
+
+  <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link rel="stylesheet" href="/stylesheets/style.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.5/angular.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.18/angular-ui-router.min.js"></script>
+
+  <script src="/js/module.js"></script>
+  <script src="/js/controllers.js"></script>
+  <script src="/js/services.js"></script>
+
+</head>
+<body ng-app='mybookApp'>
+
+  <div class="container">
+    <div class="row">
+      <button class="btn btn-sm btn-default" ui-sref='home'>Home</button>
+      <span ng-hide='currentUser'>
+        <button class="btn btn-sm btn-default" ui-sref='login'>Login</button>
+        <button class="btn btn-sm btn-default" ui-sref='register'>Register</button>
+      </span>
+      <span ng-show='currentUser'>
+        <button class="btn btn-sm btn-default" ui-sref='profile'>Profile</button>
+        <button class="btn btn-sm btn-default" ng-click='logout()'>Logout</button>
+        <span>Hello {{currentUser.username}}!</span>
+      </span>
+    </div>
+
+    <ui-view></ui-view>
+
+  </div>
+</body>
 </html>
