--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,7 +4,6 @@
   <meta charset="UTF-8">
   <title>Mybook</title>
 
-  <!-- <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"> -->
   <link rel="stylesheet" href="/stylesheets/style.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
 
@@ -16,7 +15,7 @@
   <script src="/js/services.js"></script>
 
 </head>
-<body ng-app='mybookApp'>
+<body ng-app='mybookApp' ng-controller='mainCtrl'>
 
   <div class="container">
     <div class="row">
